--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
       - MYSQL_DATABASE=cubes
     volumes: 
       - ./db.sql:/docker-entrypoint-initdb.d/db.sql
+    ports: 
+      - "3308:3306"
+      
   app:
     image: golang:1.12
     environment: 
