--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,23 +2,16 @@ version: "3"
 services: 
   db:
     image: mariadb
-    environment: 
-      - MYSQL_ROOT_PASSWORD=password
-      - MYSQL_DATABASE=cubes
+    env_file: .env
     volumes: 
       - ./db.sql:/docker-entrypoint-initdb.d/db.sql
+      - exchangedb:/var/lib/mysql
     ports: 
       - "3308:3306"
       
   app:
     image: golang:1.12
-    environment: 
-      - APP_PORT=8080
-      - MYSQL_USERNAME=root
-      - MYSQL_PASSWORD=password
-      - MYSQL_HOST=db
-      - MYSQL_PORT=3306
-      - MYSQL_DB=cubes
+    env_file: .env
     volumes: 
       - ./:/app
     working_dir: /app
@@ -27,3 +20,7 @@ services:
       - "8080:8080"
     depends_on: 
       - db
+
+#volumes
+volumes: 
+    exchangedb:
